--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,9 +1,9 @@
 /*essential background image styling*/
 body{
-	background-image: url("img/ws0-wm-1920-1080-80.jpg");
+	background-image: url("../img/ws3-wm-1920-1080-80.jpg");
 	background-repeat:no-repeat;
 	background-attachment:fixed;
-	background-position:left;		/*fixes image to right, left or center */
+	background-position:left bottom;		/*fixes image to right, left or center */
 	background-size:cover;
 }
 
