--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -6,12 +6,44 @@ body{
 	background-attachment:fixed;
 	background-position:left center;		/*fixes image to right, left or center */
 	background-size:cover;
+	font-family: 'Cabin', sans-serif;
 }
 
+h1{
+	font-family: 'Special Elite', cursive;
+	font-size: 5em;
+}
+
+.well{
+  background:rgba(212, 216, 209, 0.5);
+	border: 1px solid rgba(212, 216, 209, 0.5);
+	color: black;
+}
+
+
+/*
+font-family: 'Ek Mukta', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Cabin', sans-serif;
+*/
+
+/*
 p{
+	font-family: 'Rock Salt', cursive;
+	font-family: 'Amatic SC', cursive;
 	font-family: 'Pacifico', cursive;
 	font-family: 'Kavoon', cursive;
+	font-family: 'Delius Unicase', cursive;
+	font-family: 'Special Elite', cursive;
 }
+Source Sans Pro: menus
+Rock Salt: Headers
+Give You Glory: Headers
+Shadows Into Light Two: Headers
+Special Elite: Headers
+Cabin: text
+*/
+
 
 .navbar-inverse{
 	  background-color: #293845;
