--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -35,10 +35,44 @@ body{
 	text-align: center;
 }
 
-.padding-none{
-	padding:0;
+.mycontainer {
+  position: relative;
+  width: 100%;
+}
+.image {
+  display: inline;
+  width: 100%;
+  height: auto;
 }
 
+/*Initializes banner across image with zero width*/
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.5) /*#008CBA*/;
+  overflow: hidden;
+  width: 0;
+  height: 30%;
+  transition: 1s ease;
+}
+
+.mycontainer:hover .overlay {
+  width: 100%;
+}
+
+.text {
+  white-space: nowrap;
+  color: rgba(0, 0, 0, 0.9) /*white*/;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
 
 
 /*
