--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -52,6 +52,15 @@ body{
   height: auto;
 }
 
+.parallax{
+	background-image: url('../img/nm-1920-320.jpg');
+	min-height:320px;
+	background-attachment:fixed;
+	background-position:top center;
+	background-repeat:no-repeat;
+	background-size:auto;
+}
+
 /*Initializes banner across image with zero width*/
 .overlay {
   position: absolute;
