--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -117,6 +117,13 @@ nav.navbar{
 	color:white;
 }
 
+.label{
+	font-weight:lighter;
+}
+
+.padding-20{
+	padding-top:20px;
+}
 
 /*
 font-family: 'Ek Mukta', sans-serif;
