--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -39,6 +39,22 @@ body{
 	text-align: center;
 }
 
+h1{
+	align: left;
+	padding-top:75px;
+	font-family: 'Special Elite', cursive;
+	font-size: 3.5em;
+	text-align: left;
+}
+
+h2{
+	align: left;
+	padding-top:75px;
+	font-family: 'Special Elite', cursive;
+	font-size: 2.5em;
+	text-align: left;
+}
+
 .img-container {
   position: relative;
   width: 100%;
